# lowe-g4

./: .gitignore  .gitmodules  README.md
CADPhysics/: CMakeLists.txt  Makefile
CADPhysics/include/: CADPhysicsAtomicDeexcitation.hh  CADPhysicsDI.hh  CADPhysicsDIMessenger.hh  CADPhysicsIonBoundary.hh  CADPhysicsIonBoundaryMessenger.hh  CADPhysicsIonKill.hh  CADPhysicsKill.hh  CADPhysicsKillMessenger.hh  CADPhysicsLowEnIoniMessenger.hh  CADPhysicsLowEnergyIonisation.hh  CADPhysicsOutput.hh  CADPhysicsPhysicsList.hh  CADPhysicsSSMessenger.hh  CADPhysicsSingleScattering.hh  CADPhysicsTransportation.hh  CADPhysicsTransportation.icc  CADPhysicsTransportationMessenger.hh  CADPhysicsTrapping.hh  CADPhysicsTrappingMessenger.hh  CADPhysicsUnits.hh  CADPhysicsUserTrackInfo.hh  CADPhysicsVacuum.hh  CADPhysicseBoundary.hh
CADPhysics/mott/: Mott.xls  MottReadMe.doc
CADPhysics/src/: CADPhysicsAtomicDeexcitation.cc  CADPhysicsDI.cc  CADPhysicsDIMessenger.cc  CADPhysicsIonBoundary.cc  CADPhysicsIonBoundaryMessenger.cc  CADPhysicsIonKill.cc  CADPhysicsKill.cc  CADPhysicsKillMessenger.cc  CADPhysicsLowEnIoniMessenger.cc  CADPhysicsLowEnergyIonisation.cc  CADPhysicsOutput.cc  CADPhysicsPhysicsList.cc  CADPhysicsSSMessenger.cc  CADPhysicsSingleScattering.cc  CADPhysicsTransportation.cc  CADPhysicsTransportationMessenger.cc  CADPhysicsTrapping.cc  CADPhysicsTrappingMessenger.cc  CADPhysicsUserTrackInfo.cc  CADPhysicsVacuum.cc  CADPhysicseBoundary.cc  G4GeneralParticleSourceMessenger.cc  G4VParticleChange.cc
Examples/Transmission/: BulkSample.gdml  SEMmaterials.xml  YieldCurve.gdml  YieldCurve.mac  run.sh
Examples/Transmission/Kieft_and_Bosch_materialfile/: KB_SEMmaterials.xml
Examples/Transmission/mac/: Pointsource.mac  energy.mac
SEM/: CMakeLists.txt  SEM_4.10.00.cc  SEMmaterials.xml
SEM/config/: architecture.gmk  binmake.gmk
SEM/include/: CADDetectorData.hh  SEMBulkDet.hh  SEMBulkDetHit.hh  SEMBulkDetMessenger.hh  SEMCounter.hh  SEMCounterHit.hh  SEMCounterMessenger.hh  SEMCountsPerCategory.hh  SEMDetectorConstruction.hh  SEMDetectorConstructionMessenger.hh  SEMEventAction.hh  SEMEventActionMessenger.hh  SEMGDMLReader.hh  SEMGeneralDetector.hh  SEMGeneralDetectorMessenger.hh  SEMGeneralParticleSourceMessenger.hh.bak  SEMPlane.hh  SEMPlaneHit.hh  SEMPlaneMessenger.hh  SEMPrimaryGeneratorAction.hh  SEMPrimaryGeneratorActionMessenger.hh  SEMRunAction.hh  SEMScanMessenger.hh  SEMSteppingAction.hh  SEMSteppingActionMessenger.hh  SEMSteppingVerbose.hh  SEMTrackingAction.hh  SEMTrajectory.hh  SEMTuple.hh  SEMTupleElement.hh  SEMVRML2File.hh  SEMVRML2FileSceneHandler.hh  SEMVRML2FileSceneHandler.icc  SEMVRML2FileViewer.hh  SEMVisExecutive.hh  SEMVisExecutive.icc
SEM/mac/: CLMField_WD2mm.mac  ElstarField_WD4mm.mac  GaussBeam_0.125nm.mac  GaussBeam_0.25nm.mac  GaussBeam_0.5nm.mac  GaussBeam_1.0nm.mac  GaussBeam_2.0nm.mac  GaussBeam_3.0nm.mac  GaussBeam_4.0nm.mac  energy.mac  vis.mac
SEM/mac/maclibrary/: GeomTest.mac  ImageScan.mac  LineScan.mac  Pointsource.mac  SEM.mac  TwoPointContrast.mac  vis.mac
SEM/src/: BooleanProcessor.src  G4GDMLReadMaterials.cc  G4IntersectingCone.cc  G4PolyconeSide.cc  G4QuadrangularFacet.cc  G4SteppingVerbose.cc  G4SubtractionSolid.cc  SEMBulkDet.cc  SEMBulkDetHit.cc  SEMBulkDetMessenger.cc  SEMCounter.cc  SEMCounterHit.cc  SEMCounterMessenger.cc  SEMCountsPerCategory.cc  SEMDetectorConstruction.cc  SEMDetectorConstructionMessenger.cc  SEMEventAction.cc  SEMEventActionMessenger.cc  SEMGDMLReader.cc  SEMGeneralDetector.cc  SEMGeneralDetectorMessenger.cc  SEMGeneralParticleSourceMessenger.cc.bak  SEMPlane.cc  SEMPlaneHit.cc  SEMPlaneMessenger.cc  SEMPrimaryGeneratorAction.cc  SEMPrimaryGeneratorActionMessenger.cc  SEMRunAction.cc  SEMScanMessenger.cc  SEMSteppingAction.cc  SEMSteppingActionMessenger.cc  SEMSteppingVerbose.cc  SEMTrackingAction.cc  SEMTrajectory.cc  SEMVRML2File.cc  SEMVRML2FileSceneHandler.cc  SEMVRML2FileViewer.cc
doc/: SEMmaterialrefs.odt
docker/: Dockerfile  README.md
patches/10.02/: G4GeneralParticleSourceMessenger.cc
